--- a/style.css
+++ b/style.css
@@ -1,44 +1,102 @@
 * {
-  margin: 20px;
   box-sizing: border-box;
-  padding: 0;
+ 
 }
 
 body {
-  padding: 100px 30%;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  margin-inline: 20px;
   background-image: linear-gradient(rgba(241, 242, 247, 0.959), rgba(249, 251, 252, 0.747));
 }
 
-h1 {
-  text-shadow: 2px 3px grey;
-  font-size: 40px;
+header {
+  padding-bottom: 2%;
+  display: flex;
+  flex-direction: column;
 }
 
-form {
-  padding-top: 50px;
-  border: 1px solid gray;
+a {
+  text-decoration: none;
+  color: #111;
 }
 
-.tables {
-  margin: 10px auto;
-  font-size: 25px;
+.active {
+  color: #008;
 }
 
-th {
+.navagation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   padding: 20px;
+  border: 2px solid #111;
 }
 
-.button-submit {
-  width: 20%;
-  background-image: linear-gradient(rgba(117, 121, 139, 0.712), rgba(30, 153, 202, 0.712));
-  border: 1px solid gray;
-  padding: 8px 10px;
+
+.navagation > p {
+  margin-bottom: 0;
 }
 
-.title-input,
-.author-input {
-  width: 70%;
-  padding: 8px 10px;
-  border: 1px solid gray;
+.nav {
+  display: flex;
+  list-style-type: none;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0;
+  gap: 22px;
 }
+
+.nav > li {
+  padding: 6px;
+}
+
+#dates {
+  padding-right: 1%;
+  margin-bottom: 0;
+  align-self: flex-end;
+}
+
+#list,
+#addme {
+  padding-right: 26px;
+  border-right: 2px sloid #000;
+}
+
+hr {
+  border: 1px solid #000;
+  width: 10%;
+}
+
+#bookli tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+.added {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+footer {
+  width: 100%;
+  display: flex;
+  padding: 20px;
+  border: 2px solid #111;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-top: 398px;
+  bottom: 0;
+  gap: 20px;
+
+}
+
