--- a/style.css
+++ b/style.css
@@ -5,16 +5,75 @@
 }
 
 body {
-  padding: 100px 30%;
+  padding: 10px 0;
   text-align: center;
   background-image: linear-gradient(rgba(241, 242, 247, 0.959), rgba(249, 251, 252, 0.747));
+}
+header {
+  margin: 3px 0.5rem;
+  margin-bottom: 10%;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid rgb(80, 80, 80);
+  padding: 0 0.5rem;
+}
+
+header h3 {
+  font-size: 13px;
+  text-align: right;
+  text-transform: capitalize;
+  margin-top: 3px;
+}
+
+nav h2 {
+  font-size: 18px;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+}
+
+nav li {
+  list-style: none;
+  border-right: 1px solid rgb(80, 80, 80);
+  padding: 0.3rem;
+}
+
+nav li:last-child {
+  border: none;
+}
+
+nav li a {
+  text-align: center;
+  text-decoration: none;
+  color: rgb(80, 80, 80);
+  font-size: 13px;
+  font-weight: 600;
+}
+
+nav li a:hover {
+  color: rgb(80, 80, 226);
+}
+
+.logo {
+  text-decoration: none;
+  color: rgb(80, 80, 80);
+  font-size: 13px;
+  font-weight: 600;
 }
 
 h1 {
   text-shadow: 2px 3px grey;
   font-size: 40px;
 }
-
+#top {
+  display: none;
+}
 form {
   padding-top: 50px;
   border: 1px solid gray;
@@ -41,4 +100,10 @@ th {
   width: 70%;
   padding: 8px 10px;
   border: 1px solid gray;
+}
+#contact {
+  display: none;
+}
+.for li {
+  list-style: none;
 }
