Creating the nav section

--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ form {
   margin-bottom: 0;
   gap: 22px;
 }
+.tables {
+  text-align: center;
+  margin: 1px 42%;
+}
 #contact {
   display: none;
 }
